--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,14 @@
 
 td{
   max-width: 400px;
+  overflow: hidden;
+  max-height: 50px;
 }
 table, tbody{
-  padding:10px
+  padding:10px;
+  table-layout:fixed;
+  overflow: hidden;
+  
 }
 .total{
   display:flex;
