--- a/src/context/List.css
+++ b/src/context/List.css
@@ -1,19 +1,19 @@
-body{
+body {
     background-color: rgb(177, 140, 212);
 }
 
-.List{
+.List {
     max-width: 600px;
     height: 1000px;
     background-color: white;
     border-radius: 10px;
-    display:flex;
+    display: flex;
     margin: 20px 20px;
 
 }
 
-table{
-    width:auto;
+table {
+    width: auto;
     max-height: auto;
     justify-content: center;
     align-items: center;
@@ -24,14 +24,22 @@ table{
 
 }
 
-.row{
+.row {
     border: 1px solid;
 }
-thead{
+
+thead {
     background-color: rgb(187, 185, 185);
 }
 
-th, td{
-    margin-left: 2px;
-    margin-right: 2px;
+th,
+td {
+    border-bottom: 1px solid #ddd;
+    margin: 2px;
+}
+
+tbody:hover {
+    cursor: pointer;
+    font-size: 1.1em;
+    height: 1.2em;
 }
